// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render additional times correctly 1`] = `
<div>
  <div
    key="The Label0"
  >
    <span
      className="components-opening-times-entry-m__label-additional components-opening-times-entry-m__label"
    >
      The Label
    </span>
    <span
      className="components-opening-times-entry-m__time"
    >
      Time 1
    </span>
  </div>
  <div
    key="The Label1"
  >
    <span
      className="components-opening-times-entry-m__label-additional components-opening-times-entry-m__label"
    />
    <span
      className="components-opening-times-entry-m__time"
    >
      Time 2
    </span>
  </div>
</div>
`;

exports[`should render basic times correctly 1`] = `
<div>
  <div
    key="The Label0"
  >
    <span
      className="components-opening-times-entry-m__label-basic components-opening-times-entry-m__label"
    >
      The Label
    </span>
    <span
      className="components-opening-times-entry-m__time"
    >
      Time 1
    </span>
  </div>
  <div
    key="The Label1"
  >
    <span
      className="components-opening-times-entry-m__label-basic components-opening-times-entry-m__label"
    />
    <span
      className="components-opening-times-entry-m__time"
    >
      Time 2
    </span>
  </div>
</div>
`;

exports[`should render closure times correctly 1`] = `
<div>
  <div
    key="The Label0"
  >
    <span
      className="components-opening-times-entry-m__label-closure components-opening-times-entry-m__label"
    >
      The Label
    </span>
    <span
      className="components-opening-times-entry-m__time"
    >
      Time 1
    </span>
  </div>
  <div
    key="The Label1"
  >
    <span
      className="components-opening-times-entry-m__label-closure components-opening-times-entry-m__label"
    />
    <span
      className="components-opening-times-entry-m__time"
    >
      Time 2
    </span>
  </div>
</div>
`;

exports[`should render no times correctly 1`] = `
<div>
  <span
    className="components-opening-times-entry-m__label-basic components-opening-times-entry-m__label"
  >
    The Label
  </span>
  <span
    className="components-opening-times-entry-m__time"
  >
    Closed
  </span>
</div>
`;

exports[`should render special times correctly 1`] = `
<div>
  <div
    key="The Label0"
  >
    <span
      className="components-opening-times-entry-m__label-special components-opening-times-entry-m__label"
    >
      The Label
    </span>
    <span
      className="components-opening-times-entry-m__time"
    >
      Time 1
    </span>
  </div>
  <div
    key="The Label1"
  >
    <span
      className="components-opening-times-entry-m__label-special components-opening-times-entry-m__label"
    />
    <span
      className="components-opening-times-entry-m__time"
    >
      Time 2
    </span>
  </div>
</div>
`;
